# OpenXR-Simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
mcp-server/: openxr_simulator_mcp.py  requirements.txt
scripts/: register-runtime.ps1  unregister-runtime.ps1
src/: mcp_integration.h  runtime.cpp
